Explicitly set ecmaVersion for eslint-plugin-node
For base ESLint this can be set implicitly with "env" values, but
apparently the plugin doesn't pick that up.

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,6 +8,7 @@
     "ecmaFeatures": {
       "impliedStrict": true
     },
+    "ecmaVersion": 2021,
     "sourceType": "module"
   },
   "plugins": ["node"],
